Исправить код-стайл